Fixed XStream's xml generation issue with Java modules. Also, removed unsupported formats and default to xml